# save-backup

./: .gitignore  Cargo.toml  log.txt  readme.md  test-1.yaml  test-config.yaml  test.yaml
release/: config.yaml  log.txt
src/: backup.rs  config.rs  file_data.rs  main.rs
src/backup/: backup_types.rs  file_data.rs  run.rs
src/config/: config_types.rs  parse.rs  types.rs
src/utils/: constants.rs  log.rs  path.rs  process.rs  utils.rs
