[package]
name = "save-backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
zip = "0.6.2"
chrono = "0.4.19"
winapi = {version="0.3.9", features=["processthreadsapi","winnt","handleapi"]}